--- a/data/aboutautofill.css
+++ b/data/aboutautofill.css
@@ -4,11 +4,13 @@
 
 @import url("./common.css");
 @import url("./toolbars.css");
+@import url("./tooltips.css");
 @import url("./variables.css");
 
 
 :root {
   /* from netmonitor/src/assets/styles/variables.css */
+  --primary-toolbar-height: 29px;
   --table-zebra-background: light-dark(rgba(247, 247, 247, 0.8), rgba(255,255,255,0.05));
   --table-selection-background-hover: light-dark(rgba(209, 232, 255, 0.8), rgba(53, 59, 72, 1));
 }
@@ -28,8 +30,14 @@ body,
   align-items: center;
 }
 
+.autofill-panel > .devtools-toolbar {
+  /* @TODO: Remove this in bug 1535956 */
+  min-height: var(--primary-toolbar-height);
+}
+
 .theme-body {
-  background: var(--theme-body-background)
+  background: var(--theme-body-background);
+  margin: 0;
 }
 
 .autofill-panel {
